[ADD] New Module

--- a/website_blog_post_right_column/views/website_blog_views.xml
+++ b/website_blog_post_right_column/views/website_blog_views.xml
@@ -29,6 +29,7 @@
   	<page string="Creative Commons" >
   		<group>
   		<group string="License">
+  		<field name="cc_license" />
   		<field name="cc_share" />
   		<field name="cc_commercial" />
   		<field name="cc_compact_icon" /> 
