[update] to bootstrap4

--- a/website_blog_category_and_author/views/templates.xml
+++ b/website_blog_category_and_author/views/templates.xml
@@ -42,5 +42,235 @@
         </xpath>
 
     </template>
+    
+    	
+	<template id="blog_post_short_seo" name="Blog Posts "  inherit_id="website_blog.blog_post_short"
+	customize_show="True" active="False" >
+		<xpath expr="//section[hasclass('mb0')]" position="replace">
+		</xpath>
+		<xpath expr="//div[hasclass('container', 'mb64')]" position="replace">
+			<section class="mb0">
+			<t t-if="header=='blog'">
+				<div t-if="not blog_posts" class="container mb64">
+                    <p class="css_editable_hidden">
+                        <h1>No blog post yet.</h1>
+                    </p>
+                  	<p groups="website.group_website_designer">
+                        Click on "New Page" in the top-right corner to write your first blog post.
+                    </p>
+                </div>
+                <div t-if="blog_posts" class="container mb64">
+                	<div class="row">
+                        <div class="col-md-12 mb32 mt16 text-center">
+                            <h1 t-field="blog.name"/>
+                            <h3 class="text-muted" t-field="blog.subtitle"/>
+                        </div>
+                    </div>
+                </div>
+			</t>
+			<t t-elif="header=='category'">
+				<t t-set="h_color" t-value="' '" />
+				<t t-if="color">
+					<t t-set="category_color" t-value="'border-left: 8px solid ' + color + '; padding-left: 10px;'" />
+				</t>
+				<div  class="container mb64">
+					<div class="css_editable_hidden">
+                        <h1 t-att-style="category_color"><t t-esc="target"   /></h1>
+                    </div>
+				</div>
+			</t>
+			<t t-elif="header=='tag'">
+				<div  class="container mb64">
+					<p class="css_editable_hidden">
+                        <h1><t t-esc="target" /></h1>
+                    </p>
+				</div>
+			</t>
+			<t t-elif="header=='author'">
+				<div class="row s_no_resize_cols mt16 mb16">
+						<div class="col-md-4">
+	                        <div t-field="target.image" class="o_not_editable"   t-field-options='{"widget": "image", "alt":target.name, "class":"img-circle center-block shadow mt32"}' />  
+	                        <t t-if="target.twitter">
+	                        	<h4 class="text-center"><a t-att-href="'https://twitter.com/' + target.twitter[1:]"><i class="fa fa-twitter-square o_twitter o_twitter_complete"></i> <span t-esc="target.twitter" /></a></h4>
+	                        </t>
+                         </div>   
+                        <div class="col-md-8">
+                            <h1 class="o_default_snippet_text" t-field="target.name"  />
+                            <p class="text-muted o_default_snippet_text" t-field="target.semblance" />
+                            <p><t t-esc="str(state_info['published']) + ' articles published'" /></p>
+                        </div>
+                    </div>
+			</t>
+			<t t-elif="header=='search'">
+				<div>
+					<div t-if="not blog_posts" class="container mb64">
+						<p class="css_editable_hidden">
+	                        <h4><t t-esc="'Your search ' + search + ' did not produce any results'" /></h4>
+	                    </p>
+					</div>
+					<div t-else="not blog_posts" class="container mb64">
+						<p class="css_editable_hidden">
+						<t t-if="state_info['published']==1" >
+	                        <h1><t t-esc="str(state_info['published']) + ' result for ' + search" /></h1>
+	                    </t>
+	                    <t t-else="state_info['published']>1">
+	                    	<h1><t t-esc="str(state_info['published']) + ' results for ' + search" /></h1>
+	                    </t>
+	                    </p>
+					</div>
+				</div>			
+			</t>
+			</section>
+		</xpath>
+    	<xpath expr="//div[@name='blog_post']" position="replace">  
+    		<t t-foreach="blog_posts" t-as="blog_post" >  	
+    			<t t-if="blog_post.website_category_id.schema == False"><t t-set="schm" t-value="'BlogPosting'"/></t>
+     			<t t-else=""><t t-set="schm" t-value="blog_post.website_category_id.schema"/></t>
+     			 <div class="mb32" name="blog_post" itemscope="itemscope" t-att-itemtype="'http://schema.org/' + schm" >
+	    			 <div class="row" >	
+	    			  <div class="col-sm-12" name="blog_post_info">
+	    			  	 <a t-attf-href="/blog/#{ slug(blog_post.blog_id) }/post/#{ slug(blog_post) }">
+	    			  	 	 <h2 t-field="blog_post.name" class="mb4 o_blog_post_title">Untitled Post</h2>
+	    			  	 </a>	    			  	 
+	    			  	 <p t-field="blog_post.teaser" class="mb12 mt12 o_blog_post_teaser"/>
+	    			  	  <a t-attf-href="/blog/#{ slug(blog_post.blog_id) }/author/#{blog_post.get_author_slug()}">
+                            	<span t-esc="blog_post.get_author()" style="display: inline-block;" />
+                            </a>
+                            &amp;mdash; <span t-field="blog_post.post_date" t-options='{"format": "MMMM yyyy"}'/>
+                            <span t-if="len(blog_post.message_ids) &gt; 0">
+                                &amp;mdash; <t t-esc="len(blog_post.message_ids)"/>
+                                <t t-if="len(blog_post.message_ids) &lt;= 1" >comment</t>
+                                <t t-if="len(blog_post.message_ids) &gt; 1">comments</t>
+                            </span>
+                            <span t-if="blog_post.visits &gt; 0">
+                                &amp;mdash; <t t-esc="blog_post.visits"/>
+                                <t t-if="blog_post.visits &lt;= 1" >view</t>
+                                <t t-if="blog_post.visits &gt; 1">views</t>
+                            </span>
+                            <span t-if="not blog_post.website_published" class="label label-danger">unpublished</span>
+                             <br />
+                            <div class=" pull-right">
+                            <span class="fa fa-tags"/>
+                            <!-- To display tags //no options -->
+                            <t t-foreach="blog_post.tag_ids" t-as="one_tag">
+                                <a class="mr8" t-attf-href="#{blog_url(tag=one_tag.id, date_begin=False, date_end=False)}" t-esc="one_tag.name"/>
+                            </t>
+                        </div>
+	    			  </div>
+					</div>					
+	    			  <div class="o_sharing_links text-center mt16 row">
+                                <a class="fa fa-twitter-square o_twitter o_twitter_complete"></a>
+                                <a class="fa fa-facebook-square o_facebook o_facebook_complete"></a>
+                                <a class="fa fa-linkedin-square o_linkedin o_linkedin_complete"></a>
+                                <a class="fa fa-google-plus-square o_google o_google_complete"></a>
+                            </div>
+	            	  <meta itemprop="mainEntityOfPage"  t-att-content="request.httprequest.url_root"/>
+			                <meta itemprop="headline"  t-att-content="blog_post.name"/>
+			                <meta itemprop="description"  t-att-content="blog_post.subtitle"/>
+			                <meta itemprop="image"  t-att-content="request.httprequest.url_root + blog_post.get_cover_url()[0]"/>
+			                <meta itemprop="url"  t-attf-content="/blog/#{ slug(blog_post.blog_id) }/post/#{ slug(blog_post)}"/>
+			                <meta itemprop="author"  t-att-content="blog_post.get_author()"/> 
+			                <div itemprop="publisher" itemscope="itemscope" itemtype="https://schema.org/Organization" >
+			                	<meta itemprop="name"  t-att-content="website.company_id.name"/> 
+			                	<div itemprop="logo" itemscope="itemscope" itemtype="https://schema.org/ImageObject">
+			                		<meta itemprop="url"  t-attf-content="#{request.httprequest.url_root + 'logo.png'}"/> 
+			                	</div>
+			                </div>
+			                <meta itemprop="datePublished"  t-att-content="blog_post.post_date"/> 
+			                <meta itemprop="dateModified"  t-att-content="blog_post.write_date"/>
+        		</div>
+        	</t>
+        	<div class="container text-center">
+	           <t t-call="website.pager" />
+	       </div>
+    	</xpath>
+	</template>
+	
+		<!-- Option: Blog Post List: cover image -->
+<template id="opt_blog_post_cover_image" name="Cover image"
+        customize_show="True" active="False" inherit_id="blog_post_short_seo">
+    <xpath expr="//div[@name='blog_post_info']" position="attributes">
+    	<attribute name="class">col-sm-12 col-md-6 mt32</attribute>
+   </xpath>
+    <xpath expr="//div[@name='blog_post_info']" position="before">
+    	<div class="col-sm-12 col-md-6" >    		    		
+        <div t-if="blog_post.website_category_id">
+        	<h3  t-att-style="'border-left: 5px solid ' + blog_post.website_category_id.color + '; padding-left: 8px;'"><a t-attf-href="/blog/#{ slug(blog_post.blog_id) }/category/#{ slug(blog_post.website_category_id)}"><t t-esc="blog_post.website_category_id.name" /></a></h3>
+        </div>         
+    		 <div t-att-class="'oe_post_image ' + website.style + ' ' + website.over_style" >
+    		 	 <a t-attf-href="/blog/#{ slug(blog_post.blog_id) }/post/#{ slug(blog_post) }">
+      				<img itemprop="image" t-att-src="request.httprequest.url_root + 'website_blog/static/src/img/bp_sld_' + str(blog_post.id) + '.jpg'" t-att-alt="blog_post.name" style="width:100%" />
+      			</a>	
+      		</div>  
+      	</div>        
+    </xpath>
+ 
+</template>
+	
+	<!-- Option: Blog Post List: display the author avatar -->
+<template id="opt_blog_post_author_avatar_" name="Author avatar"
+        customize_show="True" active="False" inherit_id="blog_post_short_seo">
+    <xpath expr="//span[@t-esc='blog_post.get_author()']" position="before">
+        <t t-if="blog_post.author_avatar">
+            <div t-field="blog_post.author_avatar" class="o_not_editable" style="display:inline" t-field-options='{"widget": "image", "class": "img-circle o_author_avatar_little "}' />
+        </t>
+    </xpath>
+</template>
+
+     <template id="post_author" name="Author and Category"
+        inherit_id="website_blog.blog_post_complete" active="False"  customize_show="True">
+	    <xpath expr="//h1[@id='blog_post_name']" position="before">
+	    	<p id="title_info">
+	    		<a class="label label-primary mr8" t-attf-href="/blog/#{ slug(blog_post.blog_id) }/author/#{blog_post.get_author_slug()}">
+                	<span t-esc="blog_post.get_author()"  />
+               	</a>
+               	<a class="label label-primary mr8" t-attf-href="/blog/#{ slug(blog_post.blog_id) }/category/#{ slug(blog_post.website_category_id)}"> 
+               		<t t-esc="blog_post.website_category_id.name" />
+               	</a>
+           </p>                 
+	    </xpath>
+    </template>
+    
+    <template id="post_date" name="Date and Time" 
+    	inherit_id="post_author" active="False" customize_show="True">
+    	<xpath expr="//p[@id='title_info']" position="inside">
+    		<span class="label label-primary" t-field="blog_post.post_date" t-options='{"format": "MMMM dd yyyy hh:mm"}'/>
+    	</xpath>    
+    </template>
+    
+      <template id="post_right_column" name="Right Column"
+        inherit_id="website_blog_post_right_column.post_right_column" >
+        	<xpath expr="//div[@id='main_column']" position="before">
+        		<t t-if="blog_post.website_category_id.schema == False"><t t-set="schm" t-value="'BlogPosting'"/></t>
+     			<t t-else=""><t t-set="schm" t-value="blog_post.website_category_id.schema"/></t>   
+     			<t t-set="mainEntity" t-value="request.httprequest.url_root[:len(request.httprequest.url_root)-1]"/>     	
+        	</xpath>
+        	<xpath expr="//div[@id='main_column']" position="attributes">
+        		<attribute name="itemscope"  >itemscope</attribute>
+        		<attribute name="t-attf-itemtype" >{{'http://schema.org/' + schm}}</attribute>
+        	</xpath>
+        	<xpath expr="//div[@id='main_column']" position="inside">
+        		<meta itemprop="mainEntityOfPage"  t-att-content="mainEntity"/>
+                <meta itemprop="headline"  t-att-content="blog_post.name"/>
+                <meta itemprop="description"  t-att-content="blog_post.subtitle"/>
+                <meta itemprop="image"  t-att-content="mainEntity + blog_post.get_cover_url()[0]"/>
+                <meta itemprop="url"  t-attf-content="#{mainEntity + '/blog/'}#{ slug(blog_post.blog_id) }/post/#{ slug(blog_post)}"/>
+                <meta itemprop="author"  t-att-content="blog_post.get_author()"/> 
+                <div itemprop="publisher" itemscope="itemscope" itemtype="https://schema.org/Organization" >
+                	<meta itemprop="name"  t-att-content="website.company_id.name"/> 
+                	<div itemprop="logo" itemscope="itemscope" itemtype="https://schema.org/ImageObject">
+                		<meta itemprop="url"  t-attf-content="#{request.httprequest.url_root + 'logo.png'}"/> 
+                	</div>
+                </div>
+                <meta itemprop="datePublished"  t-att-content="blog_post.post_date"/> 
+                <meta itemprop="dateModified"  t-att-content="blog_post.write_date"/> 
+        	</xpath>
+        	<xpath expr="//div[@id='blog_content']" position="attributes">
+        		<attribute name="itemprop" >articleBody</attribute>
+        	</xpath>
+        
+        </template>
+	
+	
     </data>
 </odoo>
